<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/etParticipantCount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/specify_the_maximum_participant_count"
        android:inputType="number"
        android:digits="0123456789"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnApplyParticipantCount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/apply_participant_count_button"
        style="@style/DialogButtonPositive"
        android:layout_marginTop="18dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etParticipantCount" />

    <Button
        android:id="@+id/btnCancelParticipantCount"
        style="@style/DialogButtonNegative"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:text="@string/cancel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etParticipantCount" />

</androidx.constraintlayout.widget.ConstraintLayout>